@@ -1,16 +1,16 @@
-#!/usr/bin/python
+#!/usr/bin/env python3
 
 """
-Vote counter by Blake Cretney 
+Vote counter by Blake Cretney
 
-This work is distributed AS IS.  It is up to you to 
-determine if it is useful and safe.  In particular, 
+This work is distributed AS IS.  It is up to you to
+determine if it is useful and safe.  In particular,
 NO WARRANTY is expressed or implied.
 
-I permanently give everyone the rights to use, modify, 
-copy, distribute, re-distribute, and perform this work, 
-and all derived works, to the extent that I hold copyright 
-in them.  My intent is to have this work treated as 
+I permanently give everyone the rights to use, modify,
+copy, distribute, re-distribute, and perform this work,
+and all derived works, to the extent that I hold copyright
+in them.  My intent is to have this work treated as
 public domain.
 
 This module actually starts the program.
